2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/60_not_avce_float.deca
// Description :
//      Not ! devant float
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération Not ! devant float  n'est pas valide
//
// Historique :
// cree le 10/01/2024

{
    ! 1.5 ;
}